--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>ナブカツLab</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
         <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="CSS/style.css">
     </head>
 
 <body>
@@ -119,7 +119,7 @@
     </footer>
 
      <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/js/swiper.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="JS/main.js"></script>
 </body>
 
 </html>
