--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="ナブカツ用のウェブサイトです。基本的なウェブのフロントエンドの書き方、JavaScriptの書き方を学びます。">
+        <meta name="description" content="ナブカツ用のウェブサイトです。ウェブのフロントエンドの書き方、JavaScriptの書き方を学びます。">
         <title>ナブカツLab</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
         <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
